--- a/docs/derivations.tex
+++ b/docs/derivations.tex
@@ -20,14 +20,14 @@
     \hline
     $Q_{uk}$ & Discharge at upstream end of superlink k \\
     $C_{uk}$ & Coefficient of discharge at upstream end of superlink k \\
-    $A_{uk}$ & Area at upstream end of superlink k \\
+    $A_{uk}$ & Cross-sectional area of flow at upstream end of superlink k \\
     $\Delta H_{uk}$ & Head difference at upstream end of superlink k \\
     $H_{juk}$ & Head at junction upstream of superlink k (ground elevation + water depth) \\
     $h_{uk}$ & Water depth at upstream of superlink k \\
     $z_{inv, uk}$ & Invert elevation at upstream end of superlink k \\
     $Q_{dk}$ & Discharge at downstream end of superlink k \\
     $C_{dk}$ & Coefficient of discharge at downstream end of superlink k \\
-    $A_{dk}$ & Area at downstream end of superlink k \\
+    $A_{dk}$ & Cross-sectional area of flow at downstream end of superlink k \\
     $\Delta H_{dk}$ & Head difference at downstream end of superlink k \\
     $H_{jdk}$ & Head at junction downstream of superlink k (ground elevation + water depth) \\
     $h_{dk}$ & Water depth at downstream of superlink k \\
