Add missing 2 again

--- a/docs/derivations.tex
+++ b/docs/derivations.tex
@@ -119,8 +119,8 @@ From the depth boundary conditions at the ends of each superlink:
 Where:
 
 \begin{align}
-  \gamma_{uk} = -\frac{|Q_{uk}^{t}|}{C_{uk}^2 A_{uk}^2 g} \\
-  \gamma_{dk} = \frac{|Q_{dk}^{t}|}{C_{dk}^2 A_{dk}^2 g}
+  \gamma_{uk} = -\frac{|Q_{uk}^{t}|}{2 C_{uk}^2 A_{uk}^2 g} \\
+  \gamma_{dk} = \frac{|Q_{dk}^{t}|}{2 C_{dk}^2 A_{dk}^2 g}
 \end{align}
 
 Substituting into the recurrence relations:
@@ -273,8 +273,8 @@ Where:
 \end{equation}
 
 \begin{align}
-  \gamma_{uk} = -\frac{|Q_{uk}^{t}|}{C_{uk}^2 A_{uk}^2 g} \\
-  \gamma_{dk} = \frac{|Q_{dk}^{t}|}{C_{dk}^2 A_{dk}^2 g}
+  \gamma_{uk} = -\frac{|Q_{uk}^{t}|}{2 C_{uk}^2 A_{uk}^2 g} \\
+  \gamma_{dk} = \frac{|Q_{dk}^{t}|}{2 C_{dk}^2 A_{dk}^2 g}
 \end{align}
 
 \section*{Forming the solution matrix}
