Typo in derivation

--- a/docs/derivations.tex
+++ b/docs/derivations.tex
@@ -352,7 +352,7 @@ Where:
 
 \begin{equation}
   \boxed{
-    W_{Ik} = \frac{(g A_{ik} - E_{Ik} a_{ik}) W_{I - 1k} }{U_{I - 1k} - E_{Ik}}
+    W_{Ik} = - \frac{(g A_{ik} - E_{Ik} a_{ik}) W_{I - 1k} }{U_{I - 1k} - E_{Ik}}
  }
 \end{equation}
 
