Add support for superjunction storage

--- a/test/six_pipe_test_noise.ipynb
+++ b/test/six_pipe_test_noise.ipynb
@@ -458,6 +458,7 @@
     "    H_bc = H_bc + bc * dHdt * dt\n",
     "    Q_0j_c = Q_0j + 0.05*np.random.randn(Q_0j.size)\n",
     "    superlink.link_hydraulic_geometry()\n",
+    "    superlink.compute_storage_areas()\n",
     "    superlink.node_velocities()\n",
     "    superlink.link_coeffs(_dt=dt)\n",
     "    superlink.node_coeffs(_dt=dt)\n",
@@ -526,6 +527,7 @@
     "    Q_0j = Q_0j + dQdt * dt\n",
     "    Q_0j_c = Q_0j + 0.05*np.random.randn(Q_0j.size)\n",
     "    superlink.link_hydraulic_geometry()\n",
+    "    superlink.compute_storage_areas()\n",
     "    superlink.node_velocities()\n",
     "    superlink.link_coeffs(_dt=dt)\n",
     "    superlink.node_coeffs(_dt=dt)\n",
@@ -584,6 +586,7 @@
     "    Q_0j = Q_0j - dQdt * dt\n",
     "    Q_0j_c = Q_0j + 0.05*np.random.randn(Q_0j.size)\n",
     "    superlink.link_hydraulic_geometry()\n",
+    "    superlink.compute_storage_areas()\n",
     "    superlink.node_velocities()\n",
     "    superlink.link_coeffs(_dt=dt)\n",
     "    superlink.node_coeffs(_dt=dt)\n",
@@ -643,6 +646,7 @@
     "    H_bc = H_bc + bc * dHdt * dt\n",
     "    Q_0j_c = Q_0j + 0.05*np.random.randn(Q_0j.size)\n",
     "    superlink.link_hydraulic_geometry()\n",
+    "    superlink.compute_storage_areas()\n",
     "    superlink.node_velocities()\n",
     "    superlink.link_coeffs(_dt=dt)\n",
     "    superlink.node_coeffs(_dt=dt)\n",
@@ -730,13 +734,6 @@
     "ax[1].legend()\n",
     "plt.tight_layout()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
